--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to WDD 230 - Web Frontend Development, by Sergio Flores.">
+    <meta name="description" content="Welcome to WDD 230 - Whis is my personal Site, by Sergio Flores.">
     <meta name="author" content="Sergio Flores">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sergio Flores - WDD230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
 </head>
