--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to WDD 230 - Whis is my personal Site, by Sergio Flores.">
+    <meta name="description" content="Welcome to WDD 230 - This is my personal Site, by Sergio Flores.">
     <meta name="author" content="Sergio Flores">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sergio Flores - WDD230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
+    <meta property="og:title" content="Sergio Flores- personal site">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/zaragoza.jpg">
+    <meta property="og:url" content="https://sergiofdeveloper.github.io/wdd230/index.html">
+   
 </head>
 <body>
     <header>
