--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Sergio Flores">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sergio Flores - WDD230 - Web Frontend Development</title>
-    <link rel="stylesheet" href="styles/normalize.css">
+    <!---<link rel="stylesheet" href="styles/normalize.css">--->
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/larger.css">
+    <!--- <link rel="stylesheet" href="styles/larger.css">--->
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Sergio Flores- personal site">
     <meta property="og:type" content="website" />
@@ -32,9 +32,9 @@
             <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/matt/7?lang=eng" target="_blank">Scripture</a></li>
         </ul>
     </nav>
-
+    <h2>WDD 230: Web Frontend Development</h2>
     <main>
-        <h2>WDD 230: Web Frontend Development</h2>
+        
 
         <section class="card">
             <h3>Learning Activities</h3>
