--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <footer>
         <p>&#169; <span id="currentYear"></span></p>
         <p>Sergio Flores Romero</p>
-        <p>Spain <img src="images/spain-flag.jpg" alt="Spain flag"></p>
+        <p>Spain <img src="images/spain-flag.jpg" alt="Spain flag"></p><br>
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getdates.js"></script>
