--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li><a href="#"> Activity 1</a></li>
+                <li><a href="images/combinators.jpg"> Combinators</a></li>
                 <li><a href="#"> Activity 2</a></li>
                 <li><a href="#"> Activity 3</a></li>
                 <li><a href="#"> Activity 4</a></li>
