--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li><a href="images/combinators.jpg"> Combinators</a></li>
-                <li><a href="#"> Activity 2</a></li>
+                <li><a href="https://codepen.io/Sergiofdeveloper/pen/xxmWzoO"> CSS Pseudo Elements</a></li>
                 <li><a href="#"> Activity 3</a></li>
                 <li><a href="#"> Activity 4</a></li>
                 
