--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <ul>
                 <li><a href="images/combinators.jpg"> Combinators</a></li>
                 <li><a href="https://codepen.io/Sergiofdeveloper/pen/xxmWzoO"> CSS Pseudo Elements</a></li>
-                <li><a href="#"> Activity 3</a></li>
+                <li><a href="https://codepen.io/Sergiofdeveloper/pen/bGOMBOM"> Hamburguer Menu</a></li>
                 <li><a href="#"> Activity 4</a></li>
                 
             </ul>
