--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </header>
 
     <nav>
+        <button id="hamburger">&#8801;</button>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="chamber/siteplan.html">Site Plan</a></li>
@@ -39,7 +40,7 @@
             <ul>
                 <li><a href="images/combinators.jpg"> Combinators</a></li>
                 <li><a href="https://codepen.io/Sergiofdeveloper/pen/xxmWzoO"> CSS Pseudo Elements</a></li>
-                <li><a href="https://codepen.io/Sergiofdeveloper/pen/bGOMBOM"> Hamburguer Menu</a></li>
+                <li><a href="https://codepen.io/Sergiofdeveloper/pen/bGOMBOM"> Hamburger Menu</a></li>
                 <li><a href="#"> Activity 4</a></li>
                 
             </ul>
@@ -55,6 +56,14 @@
         </section>
     </main>
 
+    <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d23860.448179581465!2d-0.8716064012817393!3d41.62211149958856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1695846835252!5m2!1ses!2ses" 
+    width="600" 
+    height="400" 
+    style="border:0;" 
+    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+
     <footer>
         <p>&#169; <span id="currentYear"></span></p>
         <p>Sergio Flores Romero</p>
@@ -62,6 +71,7 @@
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/toogle.js"></script>
                    
 </body>
 </html>
