--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Sergio Flores">
+    <meta name="description" content="Sergio Flores- Zaragoza Chamber of Commerce Site Plan.">
+
     <title>Sergio Flores- Zaragoza Chamber of Commerce</title>
     
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Sergio Flores - Zaragoza Chamber of Commerce</h1>
+        <h1>Zaragoza Chamber of Commerce - Site Plan</h1>
         <section>
             <h2>Site Name</h2>
             <p>Zaragoza Chamber of Commerce.</p>
