--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -60,7 +60,17 @@
             <img src="images/wireframe-large-views.png" alt="wireframe-large-views"><br>
             <p>Wireframe for mobile views</p>
             <img src="images/wireframe-mobile-views.png" alt="wireframe-mobile-views"><br>
+
+            <p>
+                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px"
+                        src="http://jigsaw.w3.org/css-validator/images/vcss"
+                        alt="¡CSS Válido!" />
+                </a>
+            </p>
+
         </section>
     </div>
+    
 </body>
 </html>
