--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -46,10 +46,10 @@
 
         <section>
             <h2>Typography</h2>
-            <p>The chosen fonts will be:</p>
+            <p>The chosen fonts are:</p>
             <ul>
-                <li>Heading Font:  Candara </li>
-                <li>Body Font: Corbel </li>
+                <li>Heading Font:  Arial </li>
+                <li>Body Font: Helvetica </li>
                 
             </ul>
         </section>
