--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="images/combinators.jpg"> Combinators</a></li>
                 <li><a href="https://codepen.io/Sergiofdeveloper/pen/xxmWzoO"> CSS Pseudo Elements</a></li>
                 <li><a href="https://codepen.io/Sergiofdeveloper/pen/bGOMBOM"> Hamburger Menu</a></li>
-                <li><a href="#"> Activity 4</a></li>
+                <li><a href="https://codepen.io/Sergiofdeveloper/pen/poqORmG">Pseudo-Class Fun</a></li>
                 
             </ul>
         </section>
