--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to WDD 230 - This is my personal Site, by Sergio Flores.">
     <meta name="author" content="Sergio Flores">
-    <title>Sergio Flores - WDD 230 - Web Frontend Development</title>
+    <title>Sergio Flores WDD 230 Web Frontend Development</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
