--- a/chamber/index.html
+++ b/chamber/index.html
@@ -43,7 +43,7 @@
                 <div class="cta">
                     <h2>Welcome to the Zaragoza Chamber of Commerce</h2>
                     <p>Find here all the information for your community.</p>
-                    <a href="join.html" class="join-button">Join the Chamber</a>
+                    <a href="#" class="join-button">Join the Chamber</a>
                 </div>
                 <img src="images/hero-image.jpg" alt="Zaragoza Cityscape">
             </div>
