--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-Us">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Book of Mormon chapter Top 10">
+    <meta name="author" content="Sergio Flores">
     <link rel="stylesheet" href="styles/base.css">
     <title>Book of Mormon</title>
 </head>
 <body>
-    <h1>📖 Book of Mormon - Top 10</h1>
+    <h1>Book of Mormon - Top 10</h1>
         <main>
 	        <label for="favchap">Enter Book and Chapter: </label>
 	        <input type="text" id="favchap" placeholder="Alma 5" value="Alma 5">
