--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href="https://codepen.io/Sergiofdeveloper/pen/xxmWzoO"> CSS Pseudo Elements</a></li>
                 <li><a href="https://codepen.io/Sergiofdeveloper/pen/bGOMBOM"> Hamburger Menu</a></li>
                 <li><a href="https://codepen.io/Sergiofdeveloper/pen/poqORmG">Pseudo-Class Fun</a></li>
-                <li><a href="images/landscape.webp">WebP</a>/li>
+                <li><a href="images/landscape.webp">WebP</a><li>
             </ul>
         </section>
     
