--- a/lesson06/responsive-images.html
+++ b/lesson06/responsive-images.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="responsive images">
     <meta name="author" content="Sergio Flores">
-    <title>Document</title>
+    <title>Responsive-images</title>
     <link rel="stylesheet" href="styles/responsive-images.css">
 </head>
 <body>
