--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="chamber/" target="_blank">Chamber</a></li>
             <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
             <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/matt/7?lang=eng" target="_blank">Scripture</a></li>
-            <li><a href="/lesson06/responsive-images.html">responsive-images</a></li>
+            <li><a href="/lesson06/responsive-images.html">Responsive-images</a></li>
 
         </ul>
     </nav>
