--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Sergio Flores- personal site">
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/zaragoza.jpg">
+    <meta property="og:image" content="images/zaragoza.webp>
     <meta property="og:url" content="https://sergiofdeveloper.github.io/wdd230/index.html">
    
 </head>
 <body>
     <header>
-        <img src="images/profile-picture.jpg" alt="Sergio Flores">
+        <img src="images/profile-picture.webp" alt="Sergio Flores">
         <h1>Sergio Flores Romero</h1>
     </header>
 
@@ -40,7 +40,7 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li><a href="images/combinators.jpg"> Combinators</a></li>
+                <li><a href="images/combinators.webp"> Combinators</a></li>
                 <li><a href="https://codepen.io/Sergiofdeveloper/pen/xxmWzoO"> CSS Pseudo Elements</a></li>
                 <li><a href="https://codepen.io/Sergiofdeveloper/pen/bGOMBOM"> Hamburger Menu</a></li>
                 <li><a href="https://codepen.io/Sergiofdeveloper/pen/poqORmG">Pseudo-Class Fun</a></li>
@@ -70,7 +70,7 @@
     <footer>
         <p>&#169; <span id="currentYear"></span></p>
         <p>Sergio Flores Romero</p>
-        <p>Spain <img src="images/spain-flag.jpg" alt="Spain flag"></p><br>
+        <p>Spain <img src="images/spain-flag.webp" alt="Spain flag"></p><br>
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getdates.js"></script>
