--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to WDD 230 - This is my personal Site, by Sergio Flores.">
     <meta name="author" content="Sergio Flores">
-    <title>Sergio Flores WDD 230 Web Frontend Development</title>
+    <title>Sergio Flores - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Sergio Flores- personal site">
-    <meta property="og:type" content="website" >
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="images/zaragoza.webp">
     <meta property="og:url" content="https://sergiofdeveloper.github.io/wdd230/index.html">
    
@@ -38,7 +38,7 @@
         <div class="image-container"></div>
             <picture>
                 <source srcset="images/london-temple-small.webp" media="(max-width: 400px)">
-                <img src="images/london-temple-large.webp" alt="London Temple" width="600" height="334">
+                <img src="images/london-temple-large.webp" alt="London Temple">
             </picture>
             <div class="image-label">London Temple</div>
         </div>   
