--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Sergio Flores- personal site">
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website">
     <meta property="og:image" content="images/zaragoza.webp">
     <meta property="og:url" content="https://sergiofdeveloper.github.io/wdd230/index.html">
    
@@ -35,7 +35,7 @@
     </nav>
     <h2>WDD 230: Web Frontend Development</h2>
     <main>
-        <div class="image-container"></div>
+        <div class="image-container"> 
             <picture>
                 <source srcset="images/london-temple-small.webp" media="(max-width: 400px)">
                 <img src="images/london-temple-large.webp" alt="London Temple">
