--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <button id="hamburger">&#8801;</button>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="chamber/siteplan.html">Site Plan</a></li>
-            <li><a href="chamber/" target="_blank">Chamber</a></li>
+            <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="chamber/index.html">Chamber</a></li>
             <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
             <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/matt/7?lang=eng" target="_blank">Scripture</a></li>
             
