upload webp images

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,7 +28,7 @@
         </div> 
         <button id="hamburger">&#8801;</button>
         <div class="logo">
-                <img src="images/logo.jpg" alt="Zaragoza Chamber of Commerce">
+                <img src="images/logo.webp" alt="Zaragoza Chamber of Commerce">
         </div>
         <div class="header-content"> 
             <h1>ZARAGOZA CHAMBER OF COMMERCE</h1>
@@ -52,7 +52,11 @@
                     <p>Find here all the information for your community.</p>
                     <a href="#" class="join-button">Join the Chamber</a>
                 </div>
-                <img src="images/hero-image.jpg" alt="Zaragoza Cityscape">
+                <picture>
+                    <source srcset="images/small-hero-image.webp" media="(max-width: 786px)">
+                    <img src="images/large-hero-image.webp" alt="Join Chamber of Commerce">
+                </picture>
+                
             </div>
         </section>
        <div class="flex-container">
