--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
     <title>ZARAGOZA CHAMBER OF COMMERCE</title>.
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="icon" href="images/favicon.ico" type="images">  
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">  
 
     <meta property="og:title" content="ZARAGOZA CHAMBER OF COMMERCE">
     <meta property="og:type" content="website">
