--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <li><a href="https://codepen.io/Sergiofdeveloper/pen/poqORmG">Pseudo-Class Fun</a></li>
                     <li><a href="images/landscape.webp">WebP</a></li>
                     <li><a href="lesson06/responsive-images.html">Responsive-images</a></li>
+                    <li><a href="lesson03/lazyload.html">lazyload</a></li>
                 </ul>
             </section>
         
