--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <li><a href="images/landscape.webp">WebP</a></li>
                     <li><a href="lesson06/responsive-images.html">Responsive-images</a></li>
                     <li><a href="lesson03/lazyload.html">Lazyload Demonstration</a></li>
+                    <li><a href="lesson07/bom.html">Book of Mormon Chapter list</a></li>
                 </ul>
             </section>
         
