--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h3>Information</h3>
                 <p>Zaragoza, Spain</p>
                 <p>26° - Cloudy</p>
-                <p>Page visits: 1</p>
+                <p>Page visits: <span class="visits">Loading...</span></p>
 
                 
             </section>
@@ -84,6 +84,7 @@
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/toogle.js"></script>
+    <script src="scripts/visits.js"></script>
                    
 </body>
 </html>
