--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="images/profile-picture.webp" alt="Sergio Flores">
+        <img src="images/profile-picture.webp" alt="profile-picture">
         <h1>Sergio Flores Romero</h1>
     </header>
 
