--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -32,7 +32,7 @@
                 <h1>ZARAGOZA CHAMBER OF COMMERCE</h1>
                 <nav>
                     <ul class="menu">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="discover.html">Discover</a></li>
                         <li><a href="#">Directory</a></li>
                         <li><a href="#">Join</a></li>
