--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -44,13 +44,31 @@
         <main>
             <div class="flex-container">
                 <div class="sidebar">
-                    <div class="current-events">
-                        <h2>Current Events</h2>
-                        <!-- Sidebar content related to current events -->
+                    <div class="events">
+                        <h2><a href="#">CURRENT EVENTS</a></h2>
+                        <h3><a href="#">Business creation and Managment peer training</a></h3>
+                        <p>13-23 Nov</p>
+                        <p>Center of Art and Technology</p>
+                        <h3><a href="#">Practical Design worshop for small companies</a></h3>
+                        <p>20-21 Nov</p>
+                        <p>Walqa Technology Park</p>
+                        <h3><a href="#">AI applied to company Managment</a></h3>
+                        <p>22 Nov</p>
+                        <p>Ibercaja Campus</p>
+                        
                     </div>
-                    <div class="weather-card">
-                        <h2>Weather</h2>
-                        <!-- Sidebar content related to weather -->
+                    <div class="Job-vacancies">
+                        <h2><a href="#">JOB VACANCIES</a></h2>
+                        <h3><a href="#">Insurance agent</a></h3>
+                        <p>Helvetia Insurance Spain</p>
+                        <h3><a href="#">Full Stack Developer</a></h3>
+                        <p>NTT DATA Europe & Latam</p>
+                        <h3><a href="#">Administrative Technician<a></h3>   
+                        <p>KPMG Spain</p>
+                    </div>
+                    <div class="employment-rate">
+                        <h2><a href="#">UNEMPLOYMENT RATE SPAIN 2023</a></h2>
+                        <picture><img src="images/unemployment-rate.webp" alt="Rate of unemployment Aragon 2023" width="450" height="275"></picture>
                     </div>
                     <div class="sidebar-content">
                         <p id="visit-message"></p>
