--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,14 +61,19 @@
                     <h2>Events</h2>
                     <ul>
                         <li>
-                            <h3>Event 1</h3>
-                            <p>Event description.</p>
-                            <a href="#">More...</a>
+                        <h3><a href="#">Business creation and Managment peer training</a></h3>
+                        <p>13-23 November</p>
+                        <p>Center of Art and Technology</p>
                         </li>
                         <li>
-                            <h3>Event 2</h3>
-                            <p>Event description.</p>
-                            <a href="#">More...</a>
+                        <h3><a href="#">Practical Design worshop for small companies</a></h3>
+                        <p>20-21 Nov</p>
+                        <p>Walqa Technology Park</p>
+                        </li>
+                        <li>
+                        <h3><a href="#">AI applied to company Managment</a></h3>
+                        <p>22 November</p>
+                        <p>Ibercaja Campus</p>
                         </li>             
                     </ul>
                 </section>
