--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -67,8 +67,8 @@
                         <p>KPMG Spain</p>
                     </div>
                     <div class="employment-rate">
-                        <h2><a href="#">UNEMPLOYMENT RATE SPAIN 2023</a></h2>
-                        <picture><img src="images/unemployment-rate.webp" alt="Rate of unemployment Aragon 2023" width="400" height="264"></picture>
+                        <h2><a href="#">EVENTS ORGANISED IN 2022</a></h2>
+                        <picture><img src="images/events.webp" alt="Events organised in 2022" width="400" height="251"></picture>
                     </div>
                     <div class="sidebar-content">
                         <p id="visit-message"></p>
@@ -77,8 +77,32 @@
                 <div class="image-gallery">
                     <!-- Lazy-loaded images with captions -->
                     <div class="image">
-                        <img data-src="images/image1.jpg" alt="Image 1">
-                        <figcaption>Caption 1</figcaption>
+                        <picture>
+                            <source srcset="images/ecommerce-small.webp" media="(max-width: 350px)">
+                            <img src="images/ecommerce.webp" alt="Learn about ecommerce">
+                        </picture>
+                        <picture>
+                            <source srcset="images/job-small.webp" media="(max-width: 350px)">
+                            <img src="images/job.webp" alt="find a job" width="400" height="250">
+                        </picture>
+                        <picture>
+                            <source srcset="images/report-small.webp" media="(max-width: 350px)">
+                            <img src="images/report.webp" alt="2022 Report">
+                        </picture>
+                        <picture>
+                            <source srcset="images/bi-small.webp" media="(max-width: 350px)">
+                            <img src="images/bi.webp" alt="Business intelligence" width="400" height="250">
+                        </picture>
+                        <picture>
+                            <source srcset="images/patrons-small.webp" media="(max-width: 350px)">
+                            <img src="images/patrons.webp" alt="Patrons" width="400" height="250">
+                        </picture>
+                        <picture>
+                            <source srcset="images/fair-small.webp" media="(max-width: 350px)">
+                            <img src="images/fair.webp" alt="Fair of Commerce" width="400" height="250">
+                        </picture>
+
+
                     </div>
                     <!-- Add more images and captions as needed -->
                 </div>
