--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -75,7 +75,6 @@
                     </div>
                 </div>
                 <div class="image-gallery">
-                    <!-- Lazy-loaded images with captions -->
                     <div class="image">
                         <picture>
                             <source srcset="images/ecommerce-small.webp" media="(max-width: 350px)">
@@ -101,10 +100,17 @@
                             <source srcset="images/fair-small.webp" media="(max-width: 350px)">
                             <img src="images/fair.webp" alt="Fair of Commerce" width="400" height="250">
                         </picture>
-
+                        <picture>
+                            <source srcset="images/upcoming-events-small.webp" media="(max-width: 350px)">
+                            <img src="images/upcoming-events.webp" alt="Upcoming-events" width="400" height="250">
+                        </picture>
+                        <picture>
+                            <source srcset="images/chamber-of-commerce-small.webp" media="(max-width: 350px)">
+                            <img src="images/chamber-of-commerce.webp" alt="Chamber of Commerce" width="400" height="250">
+                        </picture>
 
                     </div>
-                    <!-- Add more images and captions as needed -->
+                    
                 </div>
             </div>
                 
