--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -78,11 +78,11 @@
                     <div class="image">
                         <picture>
                             <source srcset="images/ecommerce-small.webp" media="(max-width: 350px)">
-                            <img src="images/ecommerce.webp" alt="Learn about ecommerce">
+                            <img src="images/ecommerce.webp" alt="Learn about ecommerce" loading="lazy">
                         </picture>
                         <picture>
                             <source srcset="images/job-small.webp" media="(max-width: 350px)">
-                            <img src="images/job.webp" alt="find a job" width="400" height="250">
+                            <img src="images/job.webp" alt="find a job"  loading="lazy" width="400" height="250">
                         </picture>
                         <picture>
                             <source srcset="images/report-small.webp" media="(max-width: 350px)">
@@ -90,23 +90,23 @@
                         </picture>
                         <picture>
                             <source srcset="images/bi-small.webp" media="(max-width: 350px)">
-                            <img src="images/bi.webp" alt="Business intelligence" width="400" height="250">
+                            <img src="images/bi.webp" alt="Business intelligence"  loading="lazy" width="400" height="250" >
                         </picture>
                         <picture>
                             <source srcset="images/patrons-small.webp" media="(max-width: 350px)">
-                            <img src="images/patrons.webp" alt="Patrons" width="400" height="250">
+                            <img src="images/patrons.webp" alt="Patrons" loading="lazy" width="400" height="250">
                         </picture>
                         <picture>
                             <source srcset="images/fair-small.webp" media="(max-width: 350px)">
-                            <img src="images/fair.webp" alt="Fair of Commerce" width="400" height="250">
+                            <img src="images/fair.webp" alt="Fair of Commerce" loading="lazy"width="400" height="250">
                         </picture>
                         <picture>
                             <source srcset="images/upcoming-events-small.webp" media="(max-width: 350px)">
-                            <img src="images/upcoming-events.webp" alt="Upcoming-events" width="400" height="250">
+                            <img src="images/upcoming-events.webp" alt="Upcoming-events" loading="lazy" width="400" height="250">
                         </picture>
                         <picture>
                             <source srcset="images/chamber-of-commerce-small.webp" media="(max-width: 350px)">
-                            <img src="images/chamber-of-commerce.webp" alt="Chamber of Commerce" width="400" height="250">
+                            <img src="images/chamber-of-commerce.webp" alt="Chamber of Commerce" loading="lazy" width="400" height="250">
                         </picture>
 
                     </div>
