--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Zaragoza Chamber of Commerce - Your gateway to local business and community information.">
         <meta name="author" content="Sergio Flores">  
-        <title>ZARAGOZA CHAMBER OF COMMERCE</title>.
+        <title>ZARAGOZA CHAMBER OF COMMERCE</title>
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/base.css">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">  
