--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -77,8 +77,8 @@
                 <div class="image-gallery">
                     <div class="image">
                         <picture>
-                            <source srcset="images/ecommerce-small.webp" media="(max-width: 400px)">
-                            <img src="images/ecommerce.jpg" alt="Learn about ecommerce" loading="lazy">
+                            
+                            <img src="images/ecommerce.jpg" alt="Learn about ecommerce" loading="lazy" width="600" height="400">
                         </picture>
                         <picture>
                             
