--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -68,7 +68,11 @@
                     </div>
                     <div class="employment-rate">
                         <h2><a href="#">EVENTS ORGANISED IN 2022</a></h2>
-                        <picture><img src="images/events.webp" alt="Events organised in 2022" width="400" height="251"></picture>
+                        <picture>
+                        <source srcset="images/events-small.webp" media="(max-width: 250px)">
+                        <source srcset="images/ecommerce.webp" media="(max-width: 400px)">
+                        <img src="images/events.webp" alt="Events organised in 2022" width="400">
+                    </picture>
                     </div>
                     <div class="sidebar-content">
                         <p id="visit-message"></p>
@@ -77,36 +81,44 @@
                 <div class="image-gallery">
                     <div class="image">
                         <picture>
-                            <source srcset="images/ecommerce.jpg" media="(max-width: 600px)">
-                            <img src="images/ecommerce.jpg" alt="Learn about ecommerce" loading="lazy" width="600">
+                            <source srcset="images/ecommerce-small.webp" media="(max-width: 400px)">
+                            <source srcset="images/ecommerce.webp" media="(max-width: 600px)">
+                            <img src="images/ecommerce.webp" alt="Learn about ecommerce" loading="lazy" width="600">
                         </picture>
                         <picture>
-                            <source srcset="images/job.jpg" media="(max-width: 600px)">
-                            <img src="images/job.jpg" alt="find a job" loading="lazy" width="600">
+                            <source srcset="images/job-small.webp" media="(max-width: 400px)">
+                            <source srcset="images/job.webp" media="(max-width: 600px)">
+                            <img src="images/job.webp" alt="find a job" loading="lazy" width="600">
                         </picture>
                         <picture>
-                            <source srcset="images/report.jpg" media="(max-width: 600px)">
-                            <img src="images/report.jpg" alt="2022 Report" loading="lazy" width="600">
+                            <source srcset="images/report-small.webp" media="(max-width: 400px)">
+                            <source srcset="images/report.webp" media="(max-width: 600px)">
+                            <img src="images/report.webp" alt="2022 Report" loading="lazy" width="600">
                         </picture>
                         <picture>
+                            <source srcset="images/bi2-small.webp" media="(max-width: 400px)">
                             <source srcset="images/bi2.webp" media="(max-width: 600px)">
                             <img src="images/bi2.webp" alt="Business intelligence"  loading="lazy" width="600">
                         </picture>
                         <picture>
-                            <source srcset="images/patrons.jpg" media="(max-width: 600px)">
-                            <img src="images/patrons.jpg" alt="Patrons" loading="lazy" width="600">
+                            <source srcset="images/patrons-small.webp" media="(max-width: 400px)">
+                            <source srcset="images/patrons.webp" media="(max-width: 600px)">
+                            <img src="images/patrons.webp" alt="Patrons" loading="lazy" width="600">
                         </picture>
                         <picture>
-                            <source srcset="images/fair.jpg" media="(max-width: 600px)">
-                            <img src="images/fair.jpg" alt="Fair of Commerce" loading="lazy" width="600">
+                            <source srcset="images/fair-small.webp" media="(max-width: 400px)">
+                            <source srcset="images/fair.webp" media="(max-width: 600px)">
+                            <img src="images/fair.webp" alt="Fair of Commerce" loading="lazy" width="600">
                         </picture>
                         <picture>
-                            <source srcset="images/upcoming-events.jpg" media="(max-width: 600px)">
-                            <img src="images/upcoming-events.jpg" alt="Upcoming-events" loading="lazy" width="600">
+                            <source srcset="images/upcoming-events-small.webp" media="(max-width: 400px)">
+                            <source srcset="images/upcoming-events.webp" media="(max-width: 600px)">
+                            <img src="images/upcoming-events.webp" alt="Upcoming-events" loading="lazy" width="600">
                         </picture>
                         <picture>
-                            <source srcset="images/chamber-of-commerce.jpg" media="(max-width: 600px)">
-                            <img src="images/chamber-of-commerce.jpg" alt="Chamber of Commerce" loading="lazy" width="600" height="400">
+                            <source srcset="images/chamber-of-commerce-small.webp" media="(max-width: 400px)">
+                            <source srcset="images/chamber-of-commerce.webp" media="(max-width: 600px)">
+                            <img src="images/chamber-of-commerce.webp" alt="Chamber of Commerce" loading="lazy" width="600" height="400">
                         </picture>
 
                     </div>
