--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,9 +50,9 @@
                         <a href="#" class="join-button">Join the Chamber</a>
                     </div>
                     <picture>
-                        <source srcset="images/hero-image-small.webp" media="(max-width: 500px)">
-                        <source srcset="images/hero-image-medium.webp" media="(max-width: 1000px)">
-                        <img src="images/hero-image-large.webp" alt="Join Chamber of Commerce" width="1500" height="822">
+                        <source srcset="images/small-hero-image.webp" media="(max-width: 500px)">
+                        <source srcset="images/large-hero-image.webp" media="(max-width: 1000px)">
+                        <img src="images/large-hero-image.webp" alt="Join Chamber of Commerce" width="1500" height="822">
                     </picture>
                 </div>
             </section>
