--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -70,7 +70,7 @@
                         <h2><a href="#">EVENTS ORGANISED IN 2022</a></h2>
                         <picture>
                         <source srcset="images/events-small.webp" media="(max-width: 250px)">
-                        <source srcset="images/ecommerce.webp" media="(max-width: 400px)">
+                        <source srcset="images/events.webp" media="(max-width: 400px)">
                         <img src="images/events.webp" alt="Events organised in 2022" width="400">
                     </picture>
                     </div>
