--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -57,7 +57,7 @@
                         <p>Ibercaja Campus</p>
                         
                     </div>
-                    <div class="Job-vacancies">
+                    <div class="job-vacancies">
                         <h2><a href="#">JOB VACANCIES</a></h2>
                         <h3><a href="#">Insurance agent</a></h3>
                         <p>Helvetia Insurance Spain</p>
