--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -61,7 +61,7 @@
                         <p>Helvetia Insurance Spain</p>
                         <h3><a href="#">Full Stack Developer</a></h3>
                         <p>NTT DATA Europe & Latam</p>
-                        <h3><a href="#">Administrative Technician<a></h3>   
+                        <h3><a href="#">Administrative Technician</a></h3>   
                         <p>KPMG Spain</p>
                     </div>
                     <div class="employment-rate">
