--- a/chamber/index.html
+++ b/chamber/index.html
@@ -80,7 +80,7 @@
             <section class="weather-card">
                     <h2>Weather</h2>
                     <div class="weather-info">
-                        <p><img src="images/cloudy.png" alt="Cloudy weather" class="temperature-icon">Current Temperature: <span id="temperature">45</span>°F</p>
+                        <p><img src="images/cloudy.webp" alt="Cloudy weather" width="30px" height="30px"     class="temperature-icon">Current Temperature: <span id="temperature">45</span>°F</p>
                         <p>Wind Speed: <span id="wind-speed">5</span> m/h</p>
                         <p>Wind Chill: <span id="wind-chill"> </span></p>
                     </div>
