--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <li><a href="lesson06/responsive-images.html">Responsive-images</a></li>
                     <li><a href="lesson03/lazyload.html">Lazyload Demonstration</a></li>
                     <li><a href="lesson07/bom.html">Book of Mormon Chapter list</a></li>
+                    <li><a href="lesson08/tablebuild.html">HTML Table</a></li>
                 </ul>
             </section>
         
