fix minor errors table

--- a/lesson08/tablebuild.html
+++ b/lesson08/tablebuild.html
@@ -20,19 +20,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Feature 1</td>
+                    <td><strong>Feature 1</strong></td>
                     <td>✔️</td>
                     <td>✔️</td>
                     <td>✔️</td>
                 </tr>
                 <tr>
-                    <td>Feature 2</td>
+                    <td><strong>Feature 2</strong></td>
                     <td>❌</td>
                     <td>✔️</td>
                     <td>✔️</td>
                 </tr>
                 <tr>
-                    <td>Feature 3</td>
+                    <td><strong>Feature 3</strong></td>
                     <td>❌</td>
                     <td>❌</td>
                     <td>✔️</td>
