course proposal form

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <li><a href="lesson03/lazyload.html">Lazyload Demonstration</a></li>
                     <li><a href="lesson07/bom.html">Book of Mormon Chapter list</a></li>
                     <li><a href="lesson08/tablebuild.html">HTML Table</a></li>
+                    <li><a href="form/index.html">Course Proposal Form</a></li>
                 </ul>
             </section>
         
