--- a/form.html
+++ b/form.html
@@ -46,7 +46,7 @@
                     <option value="10">10</option>
                 </datalist>
 
-            <input type="submit" value="Send form" class="submitBtn">
+            <input type="submit" value="Register now" class="submitBtn">
         </fieldset>
         </form>
     </main>
