--- a/form.html
+++ b/form.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <header>
-
+        <img src="images/profile-picture.webp" alt="profile-picture">
+        <h1>Sergio Flores Romero</h1>
     </header>
     <navigation>
 
@@ -51,7 +52,10 @@
         </form>
     </main>
     <footer>
-
+        <p>&#169; <span id="currentYear"></span></p>
+        <p>Sergio Flores Romero</p>
+        <p>Spain <img src="images/spain-flag.webp" alt="Spain flag"></p><br>
+        <p id="lastModified"></p>
     </footer>
     <script src="scripts/form.js"></script>
     <script src="scripts/value.js"></script>
