--- a/form.html
+++ b/form.html
@@ -59,5 +59,6 @@
     </footer>
     <script src="scripts/form.js"></script>
     <script src="scripts/value.js"></script>
+    <script src="scripts/getdates.js"></script>
 </body>
 </html>
