--- a/form.html
+++ b/form.html
@@ -15,9 +15,18 @@
         <img src="images/profile-picture.webp" alt="profile-picture">
         <h1>Sergio Flores Romero</h1>
     </header>
-    <navigation>
+    <nav>
+        <button id="hamburger">&#8801;</button>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="chamber/index.html">Chamber</a></li>
+            <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/matt/7?lang=eng" target="_blank">Scripture</a></li>
+            
 
-    </navigation>
+        </ul>
+    </nav>
     <main>
         
         <form method="get" action="record.html">
