--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
     <nav>
         <button id="hamburger">&#8801;</button>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="chamber/index.html">Chamber</a></li>
             <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
