--- a/chamber/join.html
+++ b/chamber/join.html
@@ -41,7 +41,7 @@
                 </nav>
             </div>
         </header>
-        <main class="container">
+        <main class="contenedor">
             <fieldset>
                 <legend>JOIN THE CHAMBER</legend>
                 <form action="thankyou.html" method="get">
