--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,10 +32,10 @@
                 <h1>ZARAGOZA CHAMBER OF COMMERCE</h1>
                 <nav>
                     <ul class="menu">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="discover.html">Discover</a></li>
                         <li><a href="#">Directory</a></li>
-                        <li><a href="#">Join</a></li>
+                        <li><a href="join.html">Join</a></li>
                     </ul>
                     
                 </nav>
