--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,7 +47,7 @@
                     <div class="cta">
                         <h2>Welcome to the Zaragoza Chamber of Commerce</h2>
                         <p>Find here all the information for your community.</p>
-                        <a href="#" class="join-button">Join the Chamber</a>
+                        <a href="join.html" class="join-button">Join the Chamber</a>
                     </div>
                     <picture>
                         <source srcset="images/small-hero-image.webp" media="(max-width: 500px)">
