--- a/chamber/join.html
+++ b/chamber/join.html
@@ -41,8 +41,10 @@
                 </nav>
             </div>
         </header>
-        <main class="container-form">
-            <fieldset>
+        <main>
+        <div class="centered-content">
+        <div class="main container.form">
+            <fieldset class="form-fieldset">
                 <legend>JOIN THE CHAMBER</legend>
                 <form action="thankyou.html" method="get">
                     <label class="top" for="firstName">First Name*</label>
@@ -118,8 +120,10 @@
                     </ul>
                 </div>
             </div>
+        </div>
+    </div>
         </main>
-    </div> 
+    
         <!-- <footer>
             <div class="development-info">
                 <p>@2023 Zaragoza Chamber of Commerce</p>
