--- a/chamber/join.html
+++ b/chamber/join.html
@@ -83,14 +83,14 @@
                     <img src="images/member-benefits.webp" alt="Benefits for members" width="500">
                 <h2>MEMBERSHIP BENEFITS</h2>
                 <div class="benefits-column">
-                    <h3>NP Membership (Non-Profit)  ---- FREE---- </h3>
+                    <h3>NP MEMBERSHIP (Non-Profit)  ---- FREE---- </h3>
                     <ul>
                         <li>Special Events</li>
                         <li>Training</li>
                     </ul>
                 </div>
                 <div class="benefits-column">
-                    <h3>Bronze Membership  ---- $150 per year ----</h3>
+                    <h3>BRONZE MEMBERSHIP  ---- $150 per year ----</h3>
                     <ul>
                         <li>Special Events</li>
                         <li>Training</li>
@@ -99,7 +99,7 @@
                     </ul>
                 </div>
                 <div class="benefits-column">
-                    <h3>Silver Membership ---- $300 per year ----</h3>
+                    <h3>SILVER MEMBERSHIP ---- $300 per year ----</h3>
                     <ul>
                         <li>Special Events</li>
                         <li>Training</li>
@@ -109,7 +109,7 @@
                     </ul>
                 </div>
                 <div class="benefits-column">
-                    <h3>Gold Membership ---- $1000 per year ----</h3>
+                    <h3>GOLD MEMBERSHIP ---- $1000 per year ----</h3>
                     <ul>
                         <li>Special Events</li>
                         <li>Training</li>
