--- a/chamber/join.html
+++ b/chamber/join.html
@@ -62,7 +62,7 @@
                     <label class="top"for="mobile">Mobile Phone Number*</label>
                     <input type="tel" class="input-text" id="mobile" name="mobile" required>
             
-                    <label class="top" for="organization">Business/Organization Name:</label>
+                    <label class="top" for="organization">Business/Organization Name*</label>
                     <input type="text" class="input-text" id="organization" name="organization" required>
             
                     <label class="top" for="membership">Membership Level</label>
