--- a/chamber/join.html
+++ b/chamber/join.html
@@ -118,6 +118,7 @@
                         <li>Legal Counsel</li>
                         <li>Goverment Advocacy</li>
                         <li>Business Mentoring</li>
+                        <li>And much more...</li>
                     </ul>
                 </div>
             </div>
