--- a/chamber/join.html
+++ b/chamber/join.html
@@ -80,6 +80,7 @@
                 </form>
             </fieldset>
                 <div class="benefits-container">
+                    <source srcset="images/member-benefits-small.webp" media="(max-width: 250px)">
                     <img src="images/member-benefits.webp" alt="Benefits for members" width="500">
                 <h2>MEMBERSHIP BENEFITS</h2>
                 <div class="benefits-column">
