upload classes for benefits

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -84,14 +84,14 @@
                     <img src="images/member-benefits.webp" alt="Benefits for members" width="500">
                 <h2>MEMBERSHIP BENEFITS</h2>
                 <div class="benefits-column">
-                    <h3>NP MEMBERSHIP (Non-Profit)  ---- FREE---- </h3>
+                    <h3 class="np-membership">NP MEMBERSHIP (Non-Profit)  ---- FREE---- </h3>
                     <ul>
                         <li>Special Events</li>
                         <li>Training</li>
                     </ul>
                 </div>
                 <div class="benefits-column">
-                    <h3>BRONZE MEMBERSHIP  ---- $150 per year ----</h3>
+                    <h3 class="bronze-membership">BRONZE MEMBERSHIP  ---- $150 per year ----</h3>
                     <ul>
                         <li>Special Events</li>
                         <li>Training</li>
@@ -100,7 +100,7 @@
                     </ul>
                 </div>
                 <div class="benefits-column">
-                    <h3>SILVER MEMBERSHIP ---- $300 per year ----</h3>
+                    <h3 class="silver-membership">SILVER MEMBERSHIP ---- $300 per year ----</h3>
                     <ul>
                         <li>Special Events</li>
                         <li>Training</li>
@@ -110,7 +110,7 @@
                     </ul>
                 </div>
                 <div class="benefits-column">
-                    <h3>GOLD MEMBERSHIP ---- $1000 per year ----</h3>
+                    <h3 class="gold-membership">GOLD MEMBERSHIP ---- $1000 per year ----</h3>
                     <ul>
                         <li>Special Events</li>
                         <li>Training</li>
