--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -29,6 +29,7 @@
                 <a href="index.html">
                     <img src="images/logo.webp" alt="Zaragoza Chamber of Commerce">
                 </a>
+            </div>
             <div class="header-content"> 
                 <h1>ZARAGOZA CHAMBER OF COMMERCE</h1>
                 <nav>
