--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,7 +27,7 @@
             <button id="hamburger">&#8801;</button>
             <div class="logo">
                 <img src="images/logo.webp" alt="Zaragoza Chamber of Commerce">
-                 
+            </div>     
             <div class="header-content"> 
                 <h1>ZARAGOZA CHAMBER OF COMMERCE</h1>
                 <nav>
