--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -44,7 +44,11 @@
             </div>
         </header>
         <main>
-       
+            <div class="thankyou-message">
+                    <h2>Welcome to Zaragoza´s Chamber of Commerce</h2>
+                    <p>We have received your membership application and will review it shortly.</p>
+                    <p>A confirmation email will be sent to your provided email address.</p>   
+            </div>
         </main>
     
          <footer>
