--- a/chamber/join.html
+++ b/chamber/join.html
@@ -62,7 +62,7 @@
                     <input type="email" class="input-text" id="email" name="email" placeholder="example@example.com" required>
             
                     <label class="top"for="mobile">Mobile Phone Number*</label>
-                    <input type="tel" class="input-text" id="mobile" name="mobile" required>
+                    <input type="tel" class="input-text" id="mobile" name="mobile" placeholder="(123) 456 789"required>
             
                     <label class="top" for="organization">Business/Organization Name*</label>
                     <input type="text" class="input-text" id="organization" name="organization" required>
