--- a/chamber/join.html
+++ b/chamber/join.html
@@ -61,8 +61,8 @@
                     <label class="top" for="email">Email*</label>
                     <input type="email" class="input-text" id="email" name="email" placeholder="example@example.com" required>
             
-                    <label class="top"for="mobile">Mobile Phone Number*</label>
-                    <input type="tel" class="input-text" id="mobile" name="mobile" placeholder="(123) 456 789"required>
+                    <label class="top" for="mobile">Mobile Phone Number*</label>
+                    <input type="tel" class="input-text" id="mobile" name="mobile" placeholder="(123) 456 789" required>
             
                     <label class="top" for="organization">Business/Organization Name*</label>
                     <input type="text" class="input-text" id="organization" name="organization" required>
@@ -82,8 +82,10 @@
                 </form>
             </fieldset>
                 <div class="benefits-container">
+                    <picture>
                     <source srcset="images/member-benefits-small.webp" media="(max-width: 250px)">
                     <img src="images/member-benefits.webp" alt="Benefits for members" width="500">
+                    </picture>
                 <h2>MEMBERSHIP BENEFITS</h2>
                 <div class="benefits-column">
                     <h3 class="np-membership">NP MEMBERSHIP (Non-Profit)  ---- FREE---- </h3>
