--- a/chamber/join.html
+++ b/chamber/join.html
@@ -69,7 +69,7 @@
                     
                             <label class="top" for="membership">Membership Level</label>
                             
-                            <label class="sbs"><input type="radio" name="membership" value="np"> NP Membership (Non-Profit)</label>
+                            <label class="sbs"><input type="radio" name="membership" id="membership" value="np"> NP Membership (Non-Profit)</label>
                             <label class="sbs"><input type="radio" name="membership" value="bronze"> Bronze Membership</label>
                             <label class="sbs"><input type="radio" name="membership" value="silver"> Silver Membership</label>
                             <label class="sbs"><input type="radio" name="membership" value="gold"> Gold Membership</label>
