--- a/chamber/join.html
+++ b/chamber/join.html
@@ -142,6 +142,6 @@
         <script src="scripts/hamburger-menu.js"></script>
         <script src="scripts/dark-mode.js"></script>
         <script src="scripts/timestamp.js"></script>
-    
+    </div>
     </body>
 </html>
