--- a/chamber/join.html
+++ b/chamber/join.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/base.css">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">  
-        <meta property="og:title" content="ZARAGOZA CHAMBER OF COMMERCE">
+        <meta property="og:title" content="Join us">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://sergiofdeveloper.github.io/wdd230/chamber/index.html">  
         <meta property="og:image" content="https://sergiofdeveloper.github.io/wdd230/chamber/images/chamber-of-commerce.jpg">  
