--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Zaragoza Chamber of Commerce - Your gateway to local business and community information.">
+        <meta name="description" content="Join Zaragoza´s chamber of Commerce">
         <meta name="author" content="Sergio Flores">  
         <title>JOIN US</title>
         <link rel="stylesheet" href="styles/normalize.css">
