--- a/chamber/join.html
+++ b/chamber/join.html
@@ -13,7 +13,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://sergiofdeveloper.github.io/wdd230/chamber/index.html">  
         <meta property="og:image" content="https://sergiofdeveloper.github.io/wdd230/chamber/images/chamber-of-commerce.jpg">  
-        <meta property="og:description" content="Zaragoza Chamber of Commerce">  
+        <meta property="og:description" content="Join Zaragoza Chamber of Commerce">  
     </head>
     <body>
     <div id="content-wrapper">
