--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <li><a href="lesson08/tablebuild.html">HTML Table</a></li>
                     <li><a href="form/index.html">Course Proposal Form</a></li>
                     <li><a href="form.html">Form Build</a></li>
+                    <li><a href="lesson05/new-ward-members.json">JSON File</a></li>
                 </ul>
             </section>
         
