--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                     <li><a href="form/index.html">Course Proposal Form</a></li>
                     <li><a href="form.html">Form Build</a></li>
                     <li><a href="lesson05/new-ward-members.json">JSON File</a></li>
+                    <li><a href="lesson05/prophets.html">Latter-Day Prophets</a></li>
+
                 </ul>
             </section>
         
